--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,23 @@
 {
     "name": "cretbogdan/rhapsody-orm",
+    "type": "library",
+    "description": "Simple ORM for PHP 5.3",
+    "keywords": ["orm"],
+    "homepage": "http://github.com/cretbogdan/rhapsody",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Cret Bogdan",
+            "email": "cretbogdan@gmail.com",
+            "homepage": "https://github.com/cretbogdan/rhapsody",
+            "role": "Developer"
+        }
+    ],
     "require": {
         "php": ">=5.3.3",
         "doctrine/dbal": "2.3.*"
+    },
+    "autoload": {
+        "psr-0": { "Rhapsody": "src/" }
     }
 }
