--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
         "doctrine/dbal": "2.3.*"
     },
     "autoload": {
-        "psr-0": { "Rhapsody": "src/" }
+        "psr-0": { "": "src/" }
     }
 }
