--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "doctrine/dbal": "2.4.*"
+        "doctrine/dbal": "2.4.1"
     },
     "autoload": {
         "psr-0": { "": "src/" }
