--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "doctrine/dbal": "2.4.1"
+        "doctrine/common": "2.3.*",
+        "doctrine/dbal": "2.3.*"
     },
     "autoload": {
         "psr-0": { "": "src/" }
